# pytest-codecov

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  codecov  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-pr.yaml  python-publish.yaml  python-tox.yaml
src/pytest_codecov/: __init__.py  codecov.py  git.py  plugin.py
tests/: conftest.py  test_codecov.py  test_git.py  test_plugin.py
