[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-codecov"
dynamic = ["version"]
description = "Pytest plugin for uploading pytest-cov results to codecov.io"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "David Salvisberg", email = "david.salvisberg@seantis.ch" },
]
maintainers = [
    { name = "David Salvisberg", email = "david.salvisberg@seantis.ch" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=4.6.0",
    "pytest-cov>=2.11.0",
    "coverage[toml]>=5.2.1",
    "requests>=2.25.1",
]

[project.optional-dependencies]
git = [
    "GitPython>=3.1.15",
]

[project.urls]
Repository = "https://github.com/seantis/pytest-codecov"

[project.entry-points.pytest11]
codecov = "pytest_codecov"

[tool.setuptools.dynamic]
version = {attr = "pytest_codecov.__version__"}

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
source = ["pytest_codecov"]

[tool.coverage.report]
show_missing = true
precision = 2

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py38,py39,py310,py311,py312,py313,flake8,report

    [gh-actions]
    python =
        3.8: py38,flake8
        3.9: py39
        3.10: py310
        3.11: py311
        3.12: py312
        3.13: py313

    [testenv]
    setenv =
        py{38,39,310,311,312,313}: COVERAGE_FILE = .coverage.{envname}
    commands =
        pytest --cov --cov-report= {posargs:tests}
        pytest -n2 --cov --cov-report= {posargs:tests}
    deps =
        pytest
        coverage
        pytest-cov
        pytest-xdist
        .
        GitPython

    [testenv:flake8]
    skip_install = true
    deps = flake8
    commands = flake8 src setup.py tests

    [testenv:report]
    deps = coverage
    skip_install = true
    commands =
        coverage combine
        coverage report
"""
